refactor: HoldingCards에서 카드의 반환을 불변한 값으로 변경
- 해당 클래스는 addCard()가 있어 리스트가 불변하지 않다.
그래서 값의 안정성을 보장하기 위해 Collectors.unmodifiedList에서 List.copyOf로 변경하였다.